kubernetes/core/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vault
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "50"
    traefik.ingress.kubernetes.io/websocket: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.bhamm-lab.com`)
      middlewares:
        - name: default-headers
      services:
        - name: vault
          port: 8200
          scheme: https
  # tls:
  #   secretName: bhamm-lab-tls
